--- a/pom.xml
+++ b/pom.xml
@@ -1,22 +1,57 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<parent>
-		<artifactId>commons</artifactId>
-		<groupId>es.upv.dsic.gti-ia</groupId>
-		<version>0.3</version>
-	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>es.upv.dsic.gti-ia</groupId>
 	<artifactId>thomas</artifactId>
 	<packaging>pom</packaging>
 	<name>THOMAS</name>
 	<version>0.3</version>
-
+	<licenses>
+		<license>
+			<name>GNU</name>
+			<url>http://www.gnu.org/copyleft/gpl.html</url>
+		</license>
+	</licenses>
+	<organization>
+		<name>GTI-IA</name>
+		<url>http://users.dsic.upv.es/grupos/ia/ia.html</url>
+	</organization>
+	<developers>
+		<developer>
+			<name>Natalia Criado</name>
+			<email>ncriado@dsic.upv.es</email>
+		</developer>
+		<developer>
+			<name>Elena del Val Noguera</name>
+			<email>edelval@dsic.upv.es</email>
+		</developer>
+		<developer>
+			<name>Joan Bellver</name>
+			<email>jbellver@dsic.upv.es</email>
+		</developer>
+		<developer>
+			<name>Sergio Pajares</name>
+			<email>spajares@dsic.upv.es</email>
+		</developer>
+	</developers>
 	<modules>
 		<module>../sfservices</module>
 		<module>../omsservices</module>
 	</modules>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.0.2</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 	<dependencies>
 
