--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <version>0.3</version>
   <name>sfservices Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  <!-- Indica de que proyecto desciende, heredaremos su configuración, librerías, plugins ... -->
   	<parent>
 		<artifactId>thomas</artifactId>
 		<groupId>es.upv.dsic.gti-ia</groupId>
@@ -14,5 +15,6 @@
 	</parent>
   <build>
     <finalName>sfservices</finalName>
+    
   </build>
 </project>
