--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,9 @@
 			<email>spajares@dsic.upv.es</email>
 		</developer>
 	</developers>
+	<!-- Que proyectos son submodulos.-->
 	<modules>
-		<module>../sfservices</module>
+		<module>../sfservices</module><!-- ../ indica que están al mismo nivel,lo haremos asi para adpatarnos a las estructuras del eclipse. -->
 		<module>../omsservices</module>
 	</modules>
 	<build>
@@ -84,7 +85,6 @@
 			<artifactId>servlet-api</artifactId>
 			<version>2.4</version>
 			<scope>provided</scope>
-
 		</dependency>
 
 		<dependency>
@@ -94,24 +94,26 @@
 			<scope>provided</scope>
 		</dependency>
 
-
 		<dependency>
 			<groupId>org.apache.ws.commons</groupId>
 			<artifactId>XmlSchema</artifactId>
 			<version>1.1</version>
 			<scope>provided</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>org.apache.axis2</groupId>
 			<artifactId>mex-impl</artifactId>
 			<version>1.3</version>
 			<scope>provided</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpcore</artifactId>
 			<version>4.0-alpha5</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
@@ -122,22 +124,18 @@
 			<groupId>org.mindswap</groupId>
 			<artifactId>owl-s</artifactId>
 			<version>1.1.0</version>
-
 		</dependency>
-
-
 
 		<dependency>
 			<groupId>org</groupId>
 			<artifactId>jade</artifactId>
 			<version>3.6.1</version>
-
 		</dependency>
+
 		<dependency>
 			<groupId>org</groupId>
 			<artifactId>jade-tools</artifactId>
 			<version>3.6.1</version>
-
 		</dependency>
 
 		<dependency>
@@ -145,8 +143,5 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.6</version>
 		</dependency>
-
-
-
 	</dependencies>
 </project>
