--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,46 @@
 	</parent>
   <build>
     <finalName>sfservices</finalName>
+    		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.1</version>
+				<executions>
+					<execution>
+						<id>despliegue</id>
+						<phase>package</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+
+
+
+						<configuration>
+
+							<tasks>
+
+								<copy
+									todir="${CATALINA_HOME}\webapps">
+
+									<!--  Copiamos el fichero .war al webapps del tomcat.
+									-->
+
+									<fileset
+										dir="${project.build.directory}/">
+
+										<include
+											name="**/${project.build.finalName}.war" />
+
+									</fileset>
+								</copy>
+							</tasks>
+						</configuration>
+					</execution>
+
+				</executions>
+			</plugin>
+		</plugins>
     
   </build>
 </project>
