--- a/pom.xml
+++ b/pom.xml
@@ -1,60 +1,20 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>es.upv.dsic.gti-ia</groupId>
-  <artifactId>sfservices</artifactId>
-  <packaging>war</packaging>
-  <version>0.3</version>
-  <name>sfservices Maven Webapp</name>
-  <url>http://maven.apache.org</url>
-  <!-- Indica de que proyecto desciende, heredaremos su configuración, librerías, plugins ... -->
-  	<parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>es.upv.dsic.gti-ia</groupId>
+	<artifactId>sfservices</artifactId>
+	<packaging>war</packaging>
+	<version>0.3</version>
+	<name>sfservices Maven Webapp</name>
+	<url>http://maven.apache.org</url>
+	<!-- Indica de que proyecto desciende, heredaremos su configuración, librerías, plugins ... -->
+	<parent>
 		<artifactId>thomas</artifactId>
 		<groupId>es.upv.dsic.gti-ia</groupId>
 		<version>0.3</version>
 	</parent>
-  <build>
-    <finalName>sfservices</finalName>
-    		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-antrun-plugin</artifactId>
-				<version>1.1</version>
-				<executions>
-					<execution>
-						<id>despliegue</id>
-						<phase>package</phase>
-						<goals>
-							<goal>run</goal>
-						</goals>
-
-
-
-						<configuration>
-
-							<tasks>
-
-								<copy
-									todir="${CATALINA_HOME}\webapps">
-
-									<!--  Copiamos el fichero .war al webapps del tomcat.
-									-->
-
-									<fileset
-										dir="${project.build.directory}/">
-
-										<include
-											name="**/${project.build.finalName}.war" />
-
-									</fileset>
-								</copy>
-							</tasks>
-						</configuration>
-					</execution>
-
-				</executions>
-			</plugin>
-		</plugins>
-    
-  </build>
+	<build>
+		<finalName>sfservices</finalName>
+	</build>
 </project>
