--- a/pom.xml
+++ b/pom.xml
@@ -39,11 +39,6 @@
 			<version>1.1</version>
 		</dependency>
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>integration</artifactId>
-			<version>1.5.8</version>
-		</dependency>
-		<dependency>
 			<groupId>org.apache</groupId>
 			<artifactId>qpid-client</artifactId>
 			<version>0.5</version>
@@ -53,5 +48,18 @@
 			<artifactId>serializer</artifactId>
 			<version>0.22</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.5.2</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.mina</groupId>
+			<artifactId>mina-core</artifactId>
+			<version>1.0.0</version>
+			<scope>runtime</scope>
+		</dependency>
+
 	</dependencies>
 </project>
