--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
 			<version>1.0.0</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org</groupId>
+			<artifactId>jade</artifactId>
+			<version>3.6.1</version>
+		</dependency>
 
 	</dependencies>
 </project>
