--- a/pom.xml
+++ b/pom.xml
@@ -49,22 +49,16 @@
 			<version>0.22</version>
 		</dependency>
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.5.2</version>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.apache.mina</groupId>
 			<artifactId>mina-core</artifactId>
 			<version>1.0.0</version>
 			<scope>runtime</scope>
 		</dependency>
-		<dependency>
-			<groupId>org</groupId>
-			<artifactId>jade</artifactId>
-			<version>3.6.1</version>
-		</dependency>
 
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-nop</artifactId>
+			<version>1.5.8</version>
+		</dependency>
 	</dependencies>
 </project>
