--- a/pom.xml
+++ b/pom.xml
@@ -185,6 +185,11 @@
 			<version>1.0.0</version>
 			<scope>runtime</scope>
 		</dependency>
+			<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-nop</artifactId>
+			<version>1.5.8</version>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.ant</groupId>
 			<artifactId>ant-apache-log4j</artifactId>
