--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
+﻿<project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>es.upv.dsic.gti-ia</groupId>
 	<artifactId>magentix2</artifactId>
 	<packaging>jar</packaging>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>magentix2</name>
 	<url>http://maven.apache.org</url>
 	<contributors>
@@ -121,15 +121,25 @@
 					<maxmemory>1g</maxmemory>
 				</configuration>
 			</plugin>
-			<plugin>
+			<!--
+				<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jxr-plugin</artifactId>
-			</plugin>
-			<plugin>
+				</plugin>
+				<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
-			</plugin>
-
+				</plugin>
+				<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>2.3</version>
+				<configuration>
+				<configLocation>${basedir}/checkstyle.xml</configLocation>
+				</configuration>
+				
+				</plugin>
+			-->
 		</plugins>
 	</reporting>
 
@@ -144,12 +154,6 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
-	
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-checkstyle-plugin</artifactId>
-        <version>2.3</version>
-      </plugin>
 		</plugins>
 	</build>
 	<dependencies>
@@ -185,7 +189,7 @@
 			<version>1.0.0</version>
 			<scope>runtime</scope>
 		</dependency>
-			<dependency>
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-nop</artifactId>
 			<version>1.5.8</version>
@@ -195,6 +199,73 @@
 			<artifactId>ant-apache-log4j</artifactId>
 			<version>1.7.1</version>
 		</dependency>
-		
-		</dependencies>
+		<dependency>
+			<groupId>org.mindswap</groupId>
+			<artifactId>owl-s</artifactId>
+			<version>1.1.0</version>
+		</dependency>
+
+
+		<!-- Librerias para thomas -->
+
+
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>3.1.14</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.hp.hpl.jena</groupId>
+			<artifactId>jena</artifactId>
+			<version>2.6.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.hp.hpl.jena</groupId>
+			<artifactId>arq</artifactId>
+			<version>2.6.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.hp.hpl.jena</groupId>
+			<artifactId>xercesImpl</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>pellet</groupId>
+			<artifactId>pellet</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>pellet</groupId>
+			<artifactId>aterm-java</artifactId>
+			<version>1.6</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>com.ibm.icu</groupId>
+			<artifactId>icu_base</artifactId>
+			<version>3.4.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.ibm.icu</groupId>
+			<artifactId>icu4j</artifactId>
+			<version>4.0.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-jci-core</artifactId>
+			<version>1.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>axis</groupId>
+			<artifactId>axis</artifactId>
+			<version>1.4</version>
+		</dependency>
+
+	</dependencies>
 </project>
