He cambiado el tag licencia GNU por GNU LGPL y la URL de este tag

--- a/pom.xml
+++ b/pom.xml
@@ -60,8 +60,8 @@
 	</description>
 	<licenses>
 		<license>
-			<name>GNU</name>
-			<url>http://www.gnu.org/copyleft/gpl.html</url>
+			<name>GNU Lesser General Public License</name>
+			<url>http://www.gnu.org/licenses/lgpl.html</url>
 		</license>
 	</licenses>
 	<organization>
