--- a/pom.xml
+++ b/pom.xml
@@ -71,13 +71,6 @@
 	<developers>
 
 		<developer>
-			<name>Ricard</name>
-			<email>@dsic.upv.es</email>
-			<roles>
-				<role>Software Developer</role>
-			</roles>
-		</developer>
-		<developer>
 			<name>Alberto Palomares</name>
 			<email>apalomares@dsic.upv.es</email>
 			<roles>
@@ -95,6 +88,14 @@
 		<developer>
 			<name>Sergio Pajares</name>
 			<email>spajares@dsic.upv.es</email>
+			<roles>
+				<role>Software Developer</role>
+			</roles>
+		</developer>
+		
+		<developer>
+			<name>Ricard López Fogués</name>
+			<email>rilopez@dsic.upv.es</email>
 			<roles>
 				<role>Software Developer</role>
 			</roles>
@@ -121,25 +122,6 @@
 					<maxmemory>1g</maxmemory>
 				</configuration>
 			</plugin>
-			<!--
-				<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jxr-plugin</artifactId>
-				</plugin>
-				<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>cobertura-maven-plugin</artifactId>
-				</plugin>
-				<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>2.3</version>
-				<configuration>
-				<configLocation>${basedir}/checkstyle.xml</configLocation>
-				</configuration>
-				
-				</plugin>
-			-->
 		</plugins>
 	</reporting>
 
@@ -187,13 +169,7 @@
 			<artifactId>qpid-common</artifactId>
 			<version>0.5</version>
 		</dependency>
-		<!-- 
-		<dependency>
-			<groupId>javax.jms</groupId>
-			<artifactId>jms</artifactId>
-			<version>1.1</version>
-		</dependency>
-		 -->
+
 		<dependency>
 			<groupId>org.apache</groupId>
 			<artifactId>qpid-client</artifactId>
