--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
 				<role>Software Developer</role>
 			</roles>
 		</developer>
-		
+
 		<developer>
 			<name>Ricard López Fogués</name>
 			<email>rilopez@dsic.upv.es</email>
@@ -140,9 +140,7 @@
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
 					<descriptorRefs>
-						<descriptorRef>
-							with-dependencies
-						</descriptorRef>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
 					</descriptorRefs>
 				</configuration>
 				<executions>
