--- a/pom.xml
+++ b/pom.xml
@@ -241,4 +241,12 @@
 		</dependency>
 
 	</dependencies>
+	
+	<repositories>
+    <repository>
+      <id>GTI</id>
+      <url>http://urano.dsic.upv.es:8080/artifactory/remote-repos</url>
+    </repository>
+  </repositories>
+	
 </project>
