Cambios en la configuración por defecto de Magentix: i.e. en Settings.xml el broker de QPID reside por defecto en gtiprojects2; y en el pom.xml el repositorio está en la url: http://gti-ia.dsic.upv.es:8081/artifactory/remote-repos/ y no en el puerto 8080 de urano.

--- a/pom.xml
+++ b/pom.xml
@@ -245,7 +245,7 @@
 	<repositories>
     <repository>
       <id>GTI</id>
-      <url>http://urano.dsic.upv.es:8080/artifactory/remote-repos</url>
+      <url>http://gti-ia.dsic.upv.es:8081/artifactory/remote-repos/</url>
     </repository>
   </repositories>
 	
