Se cambian la ruta por una genérica.

--- a/nss.cfg
+++ b/nss.cfg
@@ -1,4 +1,4 @@
 name = NSSkeystore
 nssLibraryDirectory = /usr/lib
-nssSecmodDirectory = ./MMS_db
+nssSecmodDirectory = QPID_HOME/security/CA_db
 nssModule = keystore
