Se añaden comentarios en ingles.

--- a/securityAdmin.properties
+++ b/securityAdmin.properties
@@ -1,33 +1,38 @@
 <!-- Only MMS Administrator -->
 
 
-KeyStorePath=./configuration/client_keystore.jks
-KeyStorePassword=key123
-KeyStoreCertType=jks
+# set the base path for accessing keystore user
+KeyStorePath=QPID_HOME/security/MMSkeystore.jks
+#set the password to keystore
+KeyStorePassword=PASSWORD_MMSKEYSTORE
 
-TrustStorePath=./configuration/client_keystore.jks
-TrustStorePassword=key123
-TrustStoreCertType=jks
+# set the base path for accessing truststore user
+TrustStorePath=QPID_HOME/security/MMStruststore.jks
+#set the password to truststore
+TrustStorePassword=PASSWORD_MMSTRUSTSTORE
 
-CACertificatePath=./certificates/user_certificates/rootca.crt
 
-#Valores para crear los certificados
+#set the type of algorithm for the signature certificates
 sigAlg=SHA1WithRSA
+#set the validity time for the certificates (days)
 Validity=90
 
-#Ruta donde se encuentre el el fichero acl.
-ACLPath=./configuration/broker.acl
+# set the base path for accessing to broker acl.
+ACLPath=QPID_HOME/security/broker.acl
 
 
-#configuraciones para la base de datos nss
-aliasMMS=MMS CA
-passowrd=CERTIFICATE
+#set the alias to root certificate
+aliasCA=MagentixCA
+#set the password to root nss db
+password=PASSWORD_CA
+#set the type to root nss db
 type=PKCS11
-pathnsscfg=./configuration/nss.cfg
+#set the base path for accessing to configuration file nss.
+pathnsscfg=QPID_HOME/security/nss.cfg
 
 
 #!-- Properties qpid broker -->
-host=gtiiaprojects
+host=localhost
 port=5671
 vhost=test
 user=guest
@@ -35,13 +40,13 @@ pass=guest
 ssl=true
 saslMechs=EXTERNAL
 
-#configuración nombre de lso certificados cerficado. Para el commonName se utilizará el nombre del agente.
-organizationalUnit=GTI
-organization=DSIC
-city=VALENCIA
-state=COMUNIDAD VALENCIANA
+#configuración nombre de los certificados cerficado. Para el commonName se utilizará el nombre del agente.
+organizationalUnit=Magentix
+organization=orgnization
+city=city
+state=state
 country=ES
 
 #Datos sobre el alias y la contraseña del keystore
-alias=root
-key=servicePW
+alias=mms
+key=PASSWORD_MSSKEYSTORE 
