--- a/configuration/securityAdmin.properties
+++ b/configuration/securityAdmin.properties
@@ -1,6 +1,3 @@
-<!-- Only MMS Administrator -->
-
-
 # set the base path for accessing keystore user
 KeyStorePath=QPID_HOME/security/MMSkeystore.jks
 #set the password to keystore
@@ -30,8 +27,7 @@ type=PKCS11
 #set the base path for accessing to configuration file nss.
 pathnsscfg=QPID_HOME/security/nss.cfg
 
-
-#!-- Properties qpid broker -->
+#set the properties of qpid broker
 host=localhost
 port=5671
 vhost=test
@@ -40,13 +36,15 @@ pass=guest
 ssl=true
 saslMechs=EXTERNAL
 
-#configuración nombre de los certificados cerficado. Para el commonName se utilizará el nombre del agente.
+
+#set the values of certificates
 organizationalUnit=Magentix
 organization=orgnization
 city=city
 state=state
 country=ES
 
-#Datos sobre el alias y la contraseña del keystore
+#Rampart config: set the alias value of certificate for signing the messages.
 alias=mms
+#set the password of mmskeystore 
 key=PASSWORD_MSSKEYSTORE 
