Nueva entrada en el properties con clave igual al nombre de la ruta a guardar el log de registros y valor el nombre del fichero por defecto (situado en TOMCAT_HOME/bin)

--- a/configuration/securityAdmin.properties
+++ b/configuration/securityAdmin.properties
@@ -17,6 +17,9 @@ Validity=90
 # set the base path for accessing to broker acl.
 ACLPath=QPID_HOME/security/broker.acl
 
+#set the base path for log the registers User / Agent.
+Userlog=MMSregisters.log
+
 
 #set the alias to root certificate
 aliasCA=MagentixCA
