--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-﻿<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>es.upv.dsic.gti-ia</groupId>
@@ -286,6 +286,11 @@
         	<groupId>org.apache.rampart</groupId>
         	<artifactId>rampart-trust</artifactId>
         	<version>1.4</version>
+        </dependency>
+        <dependency>
+        	<groupId>jason</groupId>
+        	<artifactId>jason</artifactId>
+        	<version>1.3.2</version>
         </dependency>
 	</dependencies>
 	
