--- a/configuration/securityUser.properties
+++ b/configuration/securityUser.properties
@@ -2,36 +2,40 @@
 
 
 # set the base path for accessing keystore user
-KeyStorePath=/home/joabelfa/Escritorio/pruebas_seguridad/qpidd/security/test/Bob_keystore.jks
+KeyStorePath=./configuration/Alice_certificates/Alice_keystore.jks
 #set the password to keystore
 KeyStorePassword=password
 
 # set the base path for accessing truststore user
-TrustStorePath=/home/joabelfa/Escritorio/pruebas_seguridad/qpidd/security/test/Bob_truststore.jks
+TrustStorePath=./configuration/Alice_certificates/Alice_truststore.jks
 #set the password to truststore
 TrustStorePassword=password
 
 #set the type of certificates (dnie, own or others)
 type=own
 
-#if you use the DNIe set the base path for accesing to smartcard
+
+#Configuracion para el MMS.
+
+#if you use the DNIe set the base path for accesing to smartcard, /usr/lib/opensc/opensc-pkcs11.so
 dniePath=/usr/lib/opensc/opensc-pkcs11.so
 #set the pin of the smartcard
-dniePin=******
+dniePin=*****
 #set the type of the smartcard
 dnieType=PKCS11
+
 
 # set the connection protocol to be used to access services 
 protocol=http
 # set the name of the service host
-host=localhost
+host=gtiiaprojects
 # set the port for accessing the services
 port=8080
 # set the base path for accessing to services 
 path=/axis2/services/MMS
 
-#set the alias to user certificate (CertAutenticacion if use DNIe or user if use own certificates)
-alias=Bob
+#set the alias to user certificate (CertAutenticacion if use DNIe or user if use own certificates) nombre bellver faus joan - nif 20448448e's fnmt id 
+alias=Alice
 #set the alias to mms certificate
 aliasMMS=mms
 #set the password to keystore password_userkeystore
