Quitamos detalles no necesarios (mi nombre y dnie :s)

--- a/configuration/securityUser.properties
+++ b/configuration/securityUser.properties
@@ -34,7 +34,7 @@ port=8080
 # set the base path for accessing to services 
 path=/axis2/services/MMS
 
-#set the alias to user certificate (CertAutenticacion if use DNIe or user if use own certificates) nombre bellver faus joan - nif 20448448e's fnmt id 
+#set the alias to user certificate (CertAutenticacion if use DNIe or user if use own certificates) 
 alias=Alice
 #set the alias to mms certificate
 aliasMMS=mms
