--- a/configuration/securityAdmin.properties
+++ b/configuration/securityAdmin.properties
@@ -18,7 +18,7 @@ Validity=90
 ACLPath=QPID_HOME/security/broker.acl
 
 #set the base path for log the registers User / Agent.
-Userlog=MMSregisters.log
+Userlog=../logs/MMSregisters.log
 
 
 #set the alias to root certificate
