Dentro de este fichero se han quitado algunas claves valor que no eran estrictamente necesarias, con la intención de dar más facilidad y claridad al usuario.

--- a/configuration/securityUser.properties
+++ b/configuration/securityUser.properties
@@ -11,33 +11,28 @@ TrustStorePath=./configuration/Alice_certificates/Alice_truststore.jks
 #set the password to truststore
 TrustStorePassword=password
 
-#set the type of certificates (dnie, own or others)
+#set the type of certificates (own or others (FNMT, ACCV, ...))
 type=own
 
 
-#Configuracion para el MMS.
-
-#if you use the DNIe set the base path for accesing to smartcard, /usr/lib/opensc/opensc-pkcs11.so
-dniePath=/usr/lib/opensc/opensc-pkcs11.so
-#set the pin of the smartcard
-dniePin=*****
-#set the type of the smartcard
-dnieType=PKCS11
+#set the base path for access to correct keystore
+othersPath=./configuration/Alice_certificates/Alice_keystore.jks
+#set the pin of the smartcard or password of your keystore
+othersPin=password
+#set the type of the keystore
+othersType=PKCS12
 
 
-# set the connection protocol to be used to access services 
+#set the connection protocol to be used to access services 
 protocol=http
-# set the name of the service host
-host=gtiiaprojects
-# set the port for accessing the services
+#set the name of the service host
+host=gtiiaprojects.dsic.upv.es
+#set the port for accessing the services
 port=8080
-# set the base path for accessing to services 
+#set the base path for accessing to services 
 path=/axis2/services/MMS
 
-#set the alias to user certificate (CertAutenticacion if use DNIe or user if use own certificates) 
+#set the alias to user certificate. This alias is a PrivateKeyEntry.
 alias=Alice
-#set the alias to mms certificate
-aliasMMS=mms
-#set the password to keystore password_userkeystore
-key=password
+
 
