--- a/configuration/securityUser.properties
+++ b/configuration/securityUser.properties
@@ -26,11 +26,11 @@ othersType=PKCS12
 #set the connection protocol to be used to access services 
 protocol=http
 #set the name of the service host
-host=gtiiaprojects.dsic.upv.es
+host=gtiiaprojects
 #set the port for accessing the services
 port=8080
-#set the base path for accessing to services 
-path=/axis2/services/MMS
+#set the base path for accessing to services /ServicioMMS/services/ServicioMMS /MMS/services/MMS
+path=/MMS/services/MMS
 
 #set the alias to user certificate. This alias is a PrivateKeyEntry.
 alias=Alice
