--- a/configuration/securityUser.properties
+++ b/configuration/securityUser.properties
@@ -29,7 +29,7 @@ protocol=http
 host=gtiiaprojects
 #set the port for accessing the services
 port=8080
-#set the base path for accessing to services /ServicioMMS/services/ServicioMMS /MMS/services/MMS
+#set the base path for accessing to services 
 path=/MMS/services/MMS
 
 #set the alias to user certificate. This alias is a PrivateKeyEntry.
