--- a/configuration/securityUser.properties
+++ b/configuration/securityUser.properties
@@ -2,12 +2,12 @@
 
 
 # set the base path for accessing keystore user
-KeyStorePath=./configuration/Alice_certificates/Alice_keystore.jks
+KeyStorePath=/security/test/[Nombre_Usuario]_keystore.jks
 #set the password to keystore
 KeyStorePassword=password
 
 # set the base path for accessing truststore user
-TrustStorePath=./configuration/Alice_certificates/Alice_truststore.jks
+TrustStorePath=/security/test/[Nombre_Usuario]_truststore.jks
 #set the password to truststore
 TrustStorePassword=password
 
@@ -16,7 +16,7 @@ type=own
 
 
 #set the base path for access to correct keystore
-othersPath=./configuration/Alice_certificates/Alice_keystore.jks
+othersPath=/security/test/keystore_fnmt.p12
 #set the pin of the smartcard or password of your keystore
 othersPin=password
 #set the type of the keystore
@@ -33,6 +33,6 @@ port=8080
 path=/MMS/services/MMS
 
 #set the alias to user certificate. This alias is a PrivateKeyEntry.
-alias=Alice
+alias=[Nombre_Usuario]
 
 
