--- a/configuration/securityUser.properties
+++ b/configuration/securityUser.properties
@@ -2,12 +2,12 @@
 
 
 # set the base path for accessing keystore user
-KeyStorePath=/security/test/[Nombre_Usuario]_keystore.jks
+KeyStorePath=/security/test/[User_name]_keystore.jks
 #set the password to keystore
 KeyStorePassword=password
 
 # set the base path for accessing truststore user
-TrustStorePath=/security/test/[Nombre_Usuario]_truststore.jks
+TrustStorePath=/security/test/[User_name]_truststore.jks
 #set the password to truststore
 TrustStorePassword=password
 
@@ -33,6 +33,6 @@ port=8080
 path=/MMS/services/MMS
 
 #set the alias to user certificate. This alias is a PrivateKeyEntry.
-alias=[Nombre_Usuario]
+alias=[User_name]
 
 
