Adaptado a la configuracion de Magentix2 Desktop

--- a/src/main/resources/nss.cfg
+++ b/src/main/resources/nss.cfg
@@ -1,4 +1,4 @@
 name = NSSkeystore
 nssLibraryDirectory = /usr/lib
-nssSecmodDirectory = ./security/CA_db
+nssSecmodDirectory = ../../bin/security/CA_db
 nssModule = keystore
