--- a/src/main/resources/securityAdmin.properties
+++ b/src/main/resources/securityAdmin.properties
@@ -1,10 +1,10 @@
 # set the base path for accessing keystore user
-KeyStorePath=./security/MMSkeystore.jks
+KeyStorePath=../../bin/security/MMSkeystore.jks
 #set the password to keystore
 KeyStorePassword=password
 
 # set the base path for accessing truststore user
-TrustStorePath=./security/MMStruststore.jks
+TrustStorePath=../../bin/security/MMStruststore.jks
 #set the password to truststore
 TrustStorePassword=password
 
@@ -15,10 +15,10 @@ sigAlg=SHA1WithRSA
 Validity=90
 
 # set the base path for accessing to broker acl.
-ACLPath=QPID_HOME/security/broker.acl
+ACLPath=../../bin/security/broker.acl
 
 #set the base path for log the registers User / Agent.
-Userlog=/MMSregisters.log
+Userlog=../logs/MMSregisters.log
 
 
 #set the alias to root certificate
@@ -28,7 +28,7 @@ password=password
 #set the type to root nss db
 type=PKCS11
 #set the base path for accessing to configuration file nss.
-pathnsscfg=./security/nss.cfg
+pathnsscfg=../webapps/MMS/WEB-INF/classes/nss.cfg
 
 #set the properties of qpid broker
 host=localhost
