--- a/src/main/resources/securityAdmin.properties
+++ b/src/main/resources/securityAdmin.properties
@@ -1,12 +1,12 @@
 # set the base path for accessing keystore user
-KeyStorePath=../../bin/security/MMSkeystore.jks
+KeyStorePath=../bin/security/MMSkeystore.jks
 #set the password to keystore
-KeyStorePassword=password
+KeyStorePassword=MMS_PASSWORD
 
 # set the base path for accessing truststore user
-TrustStorePath=../../bin/security/MMStruststore.jks
+TrustStorePath=../bin/security/MMStruststore.jks
 #set the password to truststore
-TrustStorePassword=password
+TrustStorePassword=MMS_PASSWORD
 
 
 #set the type of algorithm for the signature certificates
@@ -15,20 +15,20 @@ sigAlg=SHA1WithRSA
 Validity=90
 
 # set the base path for accessing to broker acl.
-ACLPath=../../bin/security/broker.acl
+ACLPath=../bin/security/broker.acl
 
 #set the base path for log the registers User / Agent.
-Userlog=../logs/MMSregisters.log
+Userlog=logs/MMSregisters.log
 
 
 #set the alias to root certificate
 aliasCA=MagentixCA
 #set the password to root nss db
-password=password
+password=CA_PASSWORD
 #set the type to root nss db
 type=PKCS11
 #set the base path for accessing to configuration file nss.
-pathnsscfg=../webapps/MMS/WEB-INF/classes/nss.cfg
+pathnsscfg=webapps/MMS/WEB-INF/classes/nss.cfg
 
 #set the properties of qpid broker
 host=localhost
@@ -50,4 +50,4 @@ country=ES
 #Rampart config: set the alias value of certificate for signing the messages.
 alias=mms
 #set the password of mmskeystore 
-key=password
+key=MMS_PASSWORD
