--- a/src/main/resources/nss.cfg
+++ b/src/main/resources/nss.cfg
@@ -1,4 +1,4 @@
 name = NSSkeystore
 nssLibraryDirectory = /usr/lib
-nssSecmodDirectory = ../../bin/security/CA_db
+nssSecmodDirectory = ../bin/security/CA_db
 nssModule = keystore
