Cambios tras la tarea #354 sobre la adaptación del MMS al registro de usuarios en una bd y control de emisión de certificados según el estado de la base de datos.
Los fichero contenidos en la carpeta resources nos ayudan a crear el esquema de la base de datos y el usuario MMS.

--- a/pom.xml
+++ b/pom.xml
@@ -1,27 +1,28 @@
 <project>
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>es.upv.dsic.gti-ia</groupId>
-  <artifactId>MMS</artifactId>
-  <packaging>war</packaging>
-  <version>1.0</version>
-  <name>Servicio Web Thomas</name>
-  <url>http://users.dsic.upv.es/grupos/ia/ia.html</url>
-  	  <!-- *********************************** -->
-  	  <!-- **** CONSTRUCCION DEL PROYECTO **** -->
-      <!-- *********************************** -->
-  <build>
-  	<finalName>MMS</finalName>
- 
-	<plugins>
-	<!-- Plugin que tiene como entrada un WSDL y genera  un client o servidor del servicio web. -->
-	<!-- http://ws.apache.org/axis2/tools/1_2/maven-plugins/maven-wsdl2code-plugin.html -->
-	     <plugin>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>es.upv.dsic.gti-ia</groupId>
+	<artifactId>MMS</artifactId>
+	<packaging>war</packaging>
+	<version>1.0</version>
+	<name>Servicio Web Thomas</name>
+	<url>http://users.dsic.upv.es/grupos/ia/ia.html</url>
+	<!-- *********************************** -->
+	<!-- **** CONSTRUCCION DEL PROYECTO **** -->
+	<!-- *********************************** -->
+	<build>
+		<finalName>MMS</finalName>
+
+		<plugins>
+			<!-- Plugin que tiene como entrada un WSDL y genera un client o servidor 
+				del servicio web. -->
+			<!-- http://ws.apache.org/axis2/tools/1_2/maven-plugins/maven-wsdl2code-plugin.html -->
+			<plugin>
 				<groupId>org.apache.axis2</groupId>
 				<artifactId>axis2-wsdl2code-maven-plugin</artifactId>
 				<version>1.4</version>
-				
+
 				<configuration>
-				<!-- Nombre del paquete para las funtes java generadas. -->
+					<!-- Nombre del paquete para las funtes java generadas. -->
 					<packageName>
 						wtp
 					</packageName>
@@ -35,7 +36,7 @@
 					<generateServerSide>true</generateServerSide>
 					<!-- Para creare el fichero "services.xml". -->
 					<generateServicesXml>true</generateServicesXml>
-					<!-- 	Mapa de namespace URI para los paquetes. -->
+					<!-- Mapa de namespace URI para los paquetes. -->
 					<namespaceURIs>
 						<namespaceURI>
 							<uri>http://wtp/</uri>
@@ -50,33 +51,30 @@
 				<version>1.1</version>
 
 				<configuration>
-				<!-- Tareas que realizara el plugin al hacer mvn antrun:run,
-				también podemos poner la tarea en alguna fase del ciclo de vida de maven, compie, package ... -->
-				<!-- http://maven.apache.org/guides/introduction/introduction-to-the-lifecycle.html -->
+					<!-- Tareas que realizara el plugin al hacer mvn antrun:run, también 
+						podemos poner la tarea en alguna fase del ciclo de vida de maven, compie, 
+						package ... -->
+					<!-- http://maven.apache.org/guides/introduction/introduction-to-the-lifecycle.html -->
 					<tasks>
-					<!-- Copiamos al directorio de fuentes del proyecto omsservices, ya que estamos creando un servicio oms. -->
+						<!-- Copiamos al directorio de fuentes del proyecto omsservices, ya 
+							que estamos creando un servicio oms. -->
 						<copy todir="./src/main/java">
-						<!-- Copiamos las fuentes generadas con el plugin wsld2code. -->
-							<fileset
-								dir="./target/generated-sources/axis2/wsdl2code/src/">
+							<!-- Copiamos las fuentes generadas con el plugin wsld2code. -->
+							<fileset dir="./target/generated-sources/axis2/wsdl2code/src/">
 								<include name="**/*" />
-								<!-- Siempre y cuando volvamos a crear el mismos servicio deberemos descomentar
-								para que no nos vuelva a copiar la fuente Skeleton y podamos conservar la lógica del servicio. -->
-							<!-- 
-								<exclude
-									name="**/MMSSkeleton.java" />
-									 -->
+								<!-- Siempre y cuando volvamos a crear el mismos servicio deberemos 
+									descomentar para que no nos vuelva a copiar la fuente Skeleton y podamos 
+									conservar la lógica del servicio. -->
+							<!-- <exclude name="**/MMSSkeleton.java" /> -->
 
 							</fileset>
 						</copy>
-						<!-- Debido a que aun no existe ningun arquetipo web services axis2 deberemos crear
-						la carpeta services/nombre_del_servico con el servicio y el fichero services.xml -->
-						<mkdir
-							dir="./src/main/webapp/WEB-INF/services/MMS/META-INF/" />
-						<copy
-							todir="./src/main/webapp/WEB-INF/services/MMS/META-INF/">
-							<fileset
-								dir="./target/generated-sources/axis2/wsdl2code/resources/">
+						<!-- Debido a que aun no existe ningun arquetipo web services axis2 
+							deberemos crear la carpeta services/nombre_del_servico con el servicio y 
+							el fichero services.xml -->
+						<mkdir dir="./src/main/webapp/WEB-INF/services/MMS/META-INF/" />
+						<copy todir="./src/main/webapp/WEB-INF/services/MMS/META-INF/">
+							<fileset dir="./target/generated-sources/axis2/wsdl2code/resources/">
 								<include name="**/*" />
 							</fileset>
 						</copy>
@@ -86,7 +84,7 @@
 
 		</plugins>
 	</build>
-<dependencies>
+	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -212,7 +210,12 @@
 			<artifactId>axis2-transport-local</artifactId>
 			<version>1.5.2</version>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.6</version>
+		</dependency>
 	</dependencies>
-	
+
 
 </project>
