--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<artifactId>MMS</artifactId>
 	<packaging>war</packaging>
 	<version>1.0</version>
-	<name>Servicio Web Thomas</name>
+	<name>Servicio MMS</name>
 	<url>http://users.dsic.upv.es/grupos/ia/ia.html</url>
 	<!-- *********************************** -->
 	<!-- **** CONSTRUCCION DEL PROYECTO **** -->
@@ -156,12 +156,11 @@
 			<groupId>org.apache</groupId>
 			<artifactId>qpid-client-seguridad</artifactId>
 			<version>0.7</version>
-			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache</groupId>
-			<artifactId>qpid-common-seguridad</artifactId>
-			<version>0.7</version>
+			<artifactId>qpid-common</artifactId>
+			<version>0.10</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.jms</groupId>
@@ -188,17 +187,17 @@
 		<dependency>
 			<groupId>org.apache.rampart</groupId>
 			<artifactId>rampart-core</artifactId>
-			<version>1.5</version>
+			<version>1.5.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.rampart</groupId>
 			<artifactId>rampart-policy</artifactId>
-			<version>1.5</version>
+			<version>1.5.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.rampart</groupId>
 			<artifactId>rampart-trust</artifactId>
-			<version>1.5</version>
+			<version>1.5.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.ws.security</groupId>
@@ -214,6 +213,11 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.opensaml</groupId>
+			<artifactId>opensaml</artifactId>
+			<version>1.1.406</version>
 		</dependency>
 	</dependencies>
 
