--- a/pom.xml
+++ b/pom.xml
@@ -275,6 +275,13 @@
 			<artifactId>jason</artifactId>
 			<version>1.3.2</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.2.2</version>
+			<scope>compile</scope>
+		</dependency>
+
 	</dependencies>
 
 
