--- a/magentix2/pom.xml
+++ b/magentix2/pom.xml
@@ -128,6 +128,17 @@
 
 		</plugins>
 	</build>
+	<profiles> <profile>
+	<id>metrics</id> <build>
+	<plugins> <plugin>
+	<groupId>org.codehaus.mojo</groupId> <artifactId>cobertura-maven-plugin</artifactId> <version>2.5.1</version> <configuration>
+	<formats> <format>html</format> <format>xml</format>
+	</formats>
+	</configuration> </plugin>
+	</plugins> </build>
+	</profile>
+	</profiles>
+
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
