--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,24 @@
 
 		</plugins>
 	</build>
+	<profiles>
+		<profile>
+		<id>metric</id>
+		<build>
+			<plugins>
+				<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.5.1</version>
+				<configuration> <formats>
+					<format>html</format>
+					<format>xml</format> </formats>
+				</configuration>
+				</plugin>
+			</plugins>
+		</build>
+		</profile>
+	</profiles>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
