--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>es.upv.dsic.gti-ia</groupId>
 	<artifactId>magentix2</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0</version>
+	<version>1.1</version>
 	<name>magentix2</name>
 	<url>http://maven.apache.org</url>
 	<contributors>
@@ -18,6 +18,13 @@
 		<contributor>
 			<name>Agustin Espinosa</name>
 			<email>aespinosa@dsic.upv.es</email>
+			<roles>
+				<role>Faculty</role>
+			</roles>
+		</contributor>
+		<contributor>
+			<name>Soledad Valero</name>
+			<email>svalero@dsic.upv.es</email>
 			<roles>
 				<role>Faculty</role>
 			</roles>
@@ -46,15 +53,6 @@
 		<url>http://users.dsic.upv.es/grupos/ia/ia.html</url>
 	</organization>
 	<developers>
-
-		<developer>
-			<name>Alberto Palomares</name>
-			<email>apalomares@dsic.upv.es</email>
-			<roles>
-				<role>Researcher</role>
-				<role>Project Manager</role>
-			</roles>
-		</developer>
 		<developer>
 			<name>Joan Bellver</name>
 			<email>jbellver@dsic.upv.es</email>
@@ -63,13 +61,12 @@
 			</roles>
 		</developer>
 		<developer>
-			<name>Sergio Pajares</name>
-			<email>spajares@dsic.upv.es</email>
+			<name>Jaume Jordan</name>
+			<email>jjordan@dsic.upv.es</email>
 			<roles>
 				<role>Software Developer</role>
 			</roles>
 		</developer>
-
 		<developer>
 			<name>Ricard López Fogués</name>
 			<email>rilopez@dsic.upv.es</email>
@@ -281,7 +278,6 @@
 			<version>1.2.2</version>
 			<scope>compile</scope>
 		</dependency>
-
 	</dependencies>
 
 
