--- a/pom.xml
+++ b/pom.xml
@@ -299,6 +299,16 @@
 			<version>1.2.2</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.thoughtworks.xstream</groupId>
+			<artifactId>xstream</artifactId>
+			<version>1.4.2</version>
+		</dependency>
+		<dependency>
+			<groupId>jettison</groupId>
+			<artifactId>jettison</artifactId>
+			<version>1.2</version>
+		</dependency>
 
 	</dependencies>
 
